[Fix] Animation: works, but still jumps to top

--- a/src/style/scss/components.header.scss
+++ b/src/style/scss/components.header.scss
@@ -1,5 +1,6 @@
 .header {
   box-sizing: border-box;
+  position: relative;
   @include spacing(top, topSpace);
   @include mq($until: phablet) {
     @include spacing(left, small);
